--- a/index.html
+++ b/index.html
@@ -7,33 +7,35 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hot or Cold</title>
+    <title> Hot or Cold</title>
   </head>
 
   <body>
-  <div> 
+  <div class="headline"><span class="titlehot">Hot</span> <span class="titleor">or</span> <span class="titlecold">Cold</span><br/><span class= "titleguess">Guess how much my pet elephant weighs?</span></div>
+
+  <div class="elephant_pic">
   	<img src="Baby_elephant.jpg" alt="elephant" height="400" width="350">
   </div>
 
-  <div>Hot or Cold<br/>Guess how much my pet elephant weighs?</div>
-  <div class="searchbox">
+  
+  <div id="MyGuess">
     	<input type="text" name="sample_text_field">
   </div>
-    <div class="buttons">
+    <div id="btnGuess">
     	<button type="button">Guess</button>
     	
    </div>
 
    <div class="Hot">
-   		<h3>You are getting close</h3>
+   		<h3>You are getting close!</h3>
    </div>
 
    <div class="Cold">
-   		<h3>Try again</h3>
+   		<h3>Try again!</h3>
    </div>
 
    <div class="Right">
-   		<h3>Woohoo you guessed right!</h3>
+   		<h3>Congratulations. You guessed my Pet elephant's weight!</h3>
    </div>
 
   </body>
