--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
   </head>
 
   <body>
-  <div class="headline"><span class="titlehot">Hot</span> <span class="titleor">or</span> <span class="titlecold">Cold</span><br/><span class= "titleguess">Guess how much my pet elephant weighs?</span><br/><span class="titleweight">(Between 6,000 lbs -14,000 lbs)</span></div>
+  <div class="headline">
+  	<span class="titlehot">Hot</span>
+  	<span class="titleor">or</span> 
+  	<span class="titlecold">Cold</span><br/>
+  	<span class= "titleguess">Guess how much my pet elephant weighs?</span><br/>
+  	<span class="titleweight">(Between 6,000 lbs -14,000 lbs)</span>
+  </div>
 
   <div class="elephant_pic">
   	<img src="Baby_elephant.jpg" alt="elephant" height="400" width="350">
